mal implementada: la navbar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
+<nav class="navbar">
+    <!-- Soy consciente de que no funciona así jajaj -->
+    <mat-toolbar>
+        <button routerLink>Home</button>
+        <button routerLink="cronometro">Cronómetro</button>
+        <button routerLink="saludo">Saludo</button>
+    </mat-toolbar>
+</nav>
 <router-outlet></router-outlet>
